apps/code-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: code-server
  namespace: apps
  labels:
    app.kubernetes.io/name: code-server
    managed-by: flux
    app.kubernetes.io/part-of: home-cluster
    environment: production
spec:
  selector:
    app: code-server
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
