apps/code-server/ingress-external.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-server-external
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/redirect-entry-point: websecure
    traefik.ingress.kubernetes.io/router.middlewares: infra-redirect-to-https@kubernetescrd,infra-authentik-forward-auth@kubernetescrd
spec:
  rules:
    - host: code.progist.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: code-server
                port:
                  number: 80
  tls:
    - hosts:
        - code.progist.ru
      secretName: code-server-external-tls
